--- a/GPT.ipynb
+++ b/GPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "adc9757b-d90a-4ca3-ac3e-31d308f68b97",
    "metadata": {},
    "outputs": [],
@@ -27,18 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "bfdfbb9a-8ace-477b-af6b-21be8903dae4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "device: cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vocab_size = 50304 #50257\n",
     "batch_size = 2**19\n",
@@ -50,11 +42,12 @@
     "num_blocks = 12\n",
     "num_heads = 12\n",
     "dropout_neur = 0.2\n",
+    "data_dir = \n",
     "\n",
     "\n",
     "max_lr = 6e-4\n",
     "min_lr = max_lr * 0.1\n",
-    "lr_steps = 10\n",
+    "warmup_lr_steps = 700\n",
     "weight_decay = 0.1\n",
     "beta1, beta2 = 0.9, 0.95\n",
     "\n",
@@ -88,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "5ba70c2c-1dba-4868-9fbb-d7fc8e83a7ce",
    "metadata": {},
    "outputs": [],
@@ -105,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "8c7aa4be-a0d2-49bc-a705-24b06aeae8b8",
    "metadata": {},
    "outputs": [],
@@ -113,23 +106,39 @@
     "assert batch_size % (mini_batches * time_stamps * ddp_world_size) == 0, \"batch_size is not devided by B and T and number_of_gpus\"\n",
     "mini_epochs = int(batch_size / (mini_batches * time_stamps * ddp_world_size)) #number of mini-batches to get 0.5M batch\n",
     "\n",
+    "def load_tokens(filename):\n",
+    "    npt = np.load(filename)\n",
+    "    npt = npt.astype(np.int32) # added after video\n",
+    "    ptt = torch.tensor(npt, dtype=torch.long)\n",
+    "    return ptt\n",
     "\n",
     "class DataLoader():\n",
-    "    def __init__(self, B, T, cur_process, num_processes):\n",
+    "    def __init__(self, B, T, cur_process, num_processes, data_dir, split):\n",
     "        self.B = B\n",
     "        self.T = T\n",
     "        self.cur_process = cur_process\n",
+    "        self.cur_shard = 0\n",
     "        self.num_processes = num_processes\n",
-    "        \n",
-    "        with open('input.txt', 'r') as f:\n",
-    "            text = f.read()\n",
-    "        text = enc.encode(text)\n",
-    "        self.tokens = torch.tensor(text)\n",
+    "        self.data_dir = data_dir\n",
+    "\n",
+    "        shards = os.listdir(self.data_dir)\n",
+    "        shards = [s for s in shards if split in s]\n",
+    "        shards = sorted(shards)\n",
+    "        shards = [os.path.join(self.data_dir, s) for s in shards]\n",
+    "        self.shards = shards\n",
+    "\n",
+    "        self.tokens = load_tokens(self.shards[self.cur_shard])\n",
     "        \n",
     "        self.current_step = cur_process * B * T\n",
     "\n",
     "        print(f\"loaded {len(text)} tokens\")\n",
     "\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.cur_shard = 0\n",
+    "        self.tokens = load_tokens(self.shards[self.current_shard])\n",
+    "        self.current_position = self.B * self.T * self.cur_process\n",
+    "        \n",
     "    def next_batch(self):\n",
     "        B, T = self.B, self.T\n",
     "        \n",
@@ -138,13 +147,15 @@
     "        x = (tokens[:-1]).view(B, T)\n",
     "        y = (tokens[1:]).view(B, T)\n",
     "        if (self.current_step+B*T* self.num_processes + B*T+1)  > len(self.tokens):\n",
+    "            self.cur_shard = (self.cur_shard+1) % len(self.shards)\n",
+    "            self.tokens = load_tokens(self.shards[self.cur_shard])\n",
     "            self.current_step = self.cur_process * B * T\n",
     "        return x, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "23426d49-2a88-4082-90d8-c93a07006b9f",
    "metadata": {},
    "outputs": [],
@@ -306,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "f12ce39f-92fb-4cb9-b8f3-ff8b24600422",
    "metadata": {},
    "outputs": [
@@ -335,8 +346,8 @@
     "\n",
     "print(sum(p.numel() for p in m.parameters())/1e6, 'M parameters')\n",
     "\n",
-    "data_loader = DataLoader(mini_batches, time_stamps, cur_process=ddp_rank, num_processes=ddp_world_size)\n",
-    "\n",
+    "data_loader = DataLoader(mini_batches, time_stamps, cur_process=ddp_rank, num_processes=ddp_world_size, data_dir=data_dir, split=\"train\")\n",
+    "val_loader = DataLoader(mini_batches, time_stamps, cur_process=ddp_rank, num_processes=ddp_world_size, data_dir=data_dir, split=\"val\")\n",
     "# I have taken this function [configure_optimizers] from Karpathy's nanoGPT\n",
     "optmizer = raw_m.configure_optimizers(weight_decay, max_lr, (beta1, beta2), device)\n",
     "# scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optmizer, T_max=lr_steps, eta_min=min_lr)"
@@ -344,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "67f0d7e9-84da-4821-9d0b-14f83fe32497",
    "metadata": {},
    "outputs": [
@@ -352,62 +363,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 0, loss: 11.41157, norm: 27.69186, time: 32456.01ms, tok/s: 16153.81\n",
-      "epoch: 1, loss: 10.25611, norm: 59.41640, time: 4521.97ms, tok/s: 115942.31\n",
-      "epoch: 2, loss: 10.87149, norm: 11.13864, time: 4528.18ms, tok/s: 115783.51\n",
-      "epoch: 3, loss: 9.66048, norm: 5.64720, time: 4518.69ms, tok/s: 116026.58\n",
-      "epoch: 4, loss: 8.69949, norm: 2.97525, time: 4530.95ms, tok/s: 115712.56\n",
-      "epoch: 5, loss: 10.57622, norm: 27.93170, time: 4540.89ms, tok/s: 115459.35\n",
-      "epoch: 6, loss: 8.80340, norm: 16.43364, time: 4545.46ms, tok/s: 115343.22\n",
-      "epoch: 7, loss: 8.25267, norm: 6.35556, time: 4552.14ms, tok/s: 115173.88\n",
-      "epoch: 8, loss: 8.00945, norm: 3.81256, time: 4550.01ms, tok/s: 115227.93\n",
-      "epoch: 9, loss: 7.64820, norm: 3.09563, time: 4549.56ms, tok/s: 115239.30\n",
-      "epoch: 10, loss: 7.26965, norm: 2.38938, time: 4555.97ms, tok/s: 115077.15\n",
-      "epoch: 11, loss: 7.01210, norm: 2.86920, time: 4564.73ms, tok/s: 114856.21\n",
-      "epoch: 12, loss: 6.83550, norm: 3.10380, time: 4571.70ms, tok/s: 114681.31\n",
-      "epoch: 13, loss: 6.65100, norm: 2.25953, time: 4589.57ms, tok/s: 114234.58\n",
-      "epoch: 14, loss: 6.53410, norm: 1.67421, time: 4600.50ms, tok/s: 113963.25\n",
-      "epoch: 15, loss: 6.41090, norm: 1.15972, time: 4608.43ms, tok/s: 113767.19\n",
-      "epoch: 16, loss: 6.35798, norm: 1.51990, time: 4620.93ms, tok/s: 113459.53\n",
-      "epoch: 17, loss: 6.28190, norm: 0.65863, time: 4618.82ms, tok/s: 113511.26\n",
-      "epoch: 18, loss: 6.26425, norm: 1.74340, time: 4613.78ms, tok/s: 113635.32\n",
-      "epoch: 19, loss: 6.24137, norm: 1.35742, time: 4613.66ms, tok/s: 113638.29\n",
-      "epoch: 20, loss: 6.21880, norm: 0.88430, time: 4628.62ms, tok/s: 113270.84\n",
-      "epoch: 21, loss: 6.21551, norm: 0.83949, time: 4626.25ms, tok/s: 113329.01\n",
-      "epoch: 22, loss: 6.16856, norm: 0.63989, time: 4630.36ms, tok/s: 113228.41\n",
-      "epoch: 23, loss: 6.15609, norm: 0.45960, time: 4629.77ms, tok/s: 113242.67\n",
-      "epoch: 24, loss: 6.13915, norm: 0.81744, time: 4634.58ms, tok/s: 113125.25\n",
-      "epoch: 25, loss: 6.11703, norm: 0.68325, time: 4637.56ms, tok/s: 113052.53\n",
-      "epoch: 26, loss: 6.10629, norm: 0.35434, time: 4640.71ms, tok/s: 112975.93\n",
-      "epoch: 27, loss: 6.08224, norm: 0.60423, time: 4647.18ms, tok/s: 112818.58\n",
-      "epoch: 28, loss: 6.08739, norm: 0.57781, time: 4654.58ms, tok/s: 112639.25\n",
-      "epoch: 29, loss: 6.04862, norm: 0.24882, time: 4651.02ms, tok/s: 112725.48\n",
-      "epoch: 30, loss: 6.03374, norm: 0.49800, time: 4658.42ms, tok/s: 112546.21\n",
-      "epoch: 31, loss: 6.02272, norm: 0.56266, time: 4666.96ms, tok/s: 112340.44\n",
-      "epoch: 32, loss: 5.99801, norm: 0.31906, time: 4671.62ms, tok/s: 112228.22\n",
-      "epoch: 33, loss: 5.98866, norm: 0.36436, time: 4675.33ms, tok/s: 112139.15\n",
-      "epoch: 34, loss: 5.95721, norm: 0.41721, time: 4676.15ms, tok/s: 112119.49\n",
-      "epoch: 35, loss: 5.96021, norm: 0.36433, time: 4682.39ms, tok/s: 111970.27\n",
-      "epoch: 36, loss: 5.93532, norm: 0.27529, time: 4686.43ms, tok/s: 111873.76\n",
-      "epoch: 37, loss: 5.92740, norm: 0.36161, time: 4690.58ms, tok/s: 111774.61\n",
-      "epoch: 38, loss: 5.91450, norm: 0.30999, time: 4695.23ms, tok/s: 111663.97\n",
-      "epoch: 39, loss: 5.89911, norm: 0.28093, time: 4701.72ms, tok/s: 111509.87\n",
-      "epoch: 40, loss: 5.91240, norm: 0.21516, time: 4700.83ms, tok/s: 111530.87\n",
-      "epoch: 41, loss: 5.88676, norm: 0.24564, time: 4707.84ms, tok/s: 111364.83\n",
-      "epoch: 42, loss: 5.88314, norm: 0.24538, time: 4707.71ms, tok/s: 111368.02\n",
-      "epoch: 43, loss: 5.87605, norm: 0.20103, time: 4707.57ms, tok/s: 111371.32\n",
-      "epoch: 44, loss: 5.86669, norm: 0.16380, time: 4710.69ms, tok/s: 111297.50\n",
-      "epoch: 45, loss: 5.87645, norm: 0.17651, time: 4708.72ms, tok/s: 111344.04\n",
-      "epoch: 46, loss: 5.84607, norm: 0.19264, time: 4714.44ms, tok/s: 111208.98\n",
-      "epoch: 47, loss: 5.87293, norm: 0.18035, time: 4718.21ms, tok/s: 111120.14\n",
-      "epoch: 48, loss: 5.84941, norm: 0.15189, time: 4720.30ms, tok/s: 111070.97\n",
-      "epoch: 49, loss: 5.84581, norm: 0.13224, time: 4714.31ms, tok/s: 111211.95\n"
+      "epoch: 0, loss: 11.41157, norm: 27.69188, time: 32325.76ms, tok/s: 16218.89\n",
+      "epoch: 1, loss: 10.25611, norm: 59.41579, time: 4506.23ms, tok/s: 116347.40\n",
+      "epoch: 2, loss: 10.87149, norm: 11.13861, time: 4520.24ms, tok/s: 115986.74\n",
+      "epoch: 3, loss: 9.66046, norm: 5.64720, time: 4580.88ms, tok/s: 114451.49\n",
+      "epoch: 4, loss: 8.69949, norm: 2.97520, time: 4509.18ms, tok/s: 116271.15\n",
+      "epoch: 5, loss: 10.57638, norm: 27.93199, time: 4519.66ms, tok/s: 116001.55\n",
+      "epoch: 6, loss: 8.80351, norm: 16.43631, time: 4526.21ms, tok/s: 115833.73\n",
+      "epoch: 7, loss: 8.25237, norm: 6.34794, time: 4519.39ms, tok/s: 116008.46\n",
+      "epoch: 8, loss: 8.00916, norm: 3.81174, time: 4527.34ms, tok/s: 115804.77\n",
+      "epoch: 9, loss: 7.64782, norm: 3.09381, time: 4533.17ms, tok/s: 115655.93\n",
+      "epoch: 10, loss: 7.26952, norm: 2.39419, time: 4550.22ms, tok/s: 115222.66\n",
+      "epoch: 11, loss: 7.01208, norm: 2.87011, time: 4552.84ms, tok/s: 115156.16\n",
+      "epoch: 12, loss: 6.83535, norm: 3.10105, time: 4558.39ms, tok/s: 115015.96\n",
+      "epoch: 13, loss: 6.65093, norm: 2.25774, time: 4574.87ms, tok/s: 114601.60\n",
+      "epoch: 14, loss: 6.53405, norm: 1.67505, time: 4584.06ms, tok/s: 114371.98\n",
+      "epoch: 15, loss: 6.41085, norm: 1.15996, time: 4585.82ms, tok/s: 114328.15\n",
+      "epoch: 16, loss: 6.35794, norm: 1.52028, time: 4595.24ms, tok/s: 114093.71\n",
+      "epoch: 17, loss: 6.28189, norm: 0.65885, time: 4603.83ms, tok/s: 113880.94\n",
+      "epoch: 18, loss: 6.26428, norm: 1.74657, time: 4609.61ms, tok/s: 113738.01\n",
+      "epoch: 19, loss: 6.24142, norm: 1.35916, time: 4604.73ms, tok/s: 113858.48\n",
+      "epoch: 20, loss: 6.21878, norm: 0.88186, time: 4620.39ms, tok/s: 113472.57\n",
+      "epoch: 21, loss: 6.21552, norm: 0.83900, time: 4619.55ms, tok/s: 113493.21\n",
+      "epoch: 22, loss: 6.16861, norm: 0.63955, time: 4616.50ms, tok/s: 113568.18\n",
+      "epoch: 23, loss: 6.15605, norm: 0.45920, time: 4637.19ms, tok/s: 113061.62\n",
+      "epoch: 24, loss: 6.13914, norm: 0.81742, time: 4628.52ms, tok/s: 113273.46\n",
+      "epoch: 25, loss: 6.11707, norm: 0.68586, time: 4626.09ms, tok/s: 113332.77\n",
+      "epoch: 26, loss: 6.10628, norm: 0.35437, time: 4631.40ms, tok/s: 113202.82\n",
+      "epoch: 27, loss: 6.08223, norm: 0.60547, time: 4629.98ms, tok/s: 113237.62\n",
+      "epoch: 28, loss: 6.08744, norm: 0.57989, time: 4641.27ms, tok/s: 112962.23\n",
+      "epoch: 29, loss: 6.04861, norm: 0.24861, time: 4640.28ms, tok/s: 112986.27\n",
+      "epoch: 30, loss: 6.03374, norm: 0.49940, time: 4645.06ms, tok/s: 112869.99\n",
+      "epoch: 31, loss: 6.02271, norm: 0.56315, time: 4647.56ms, tok/s: 112809.42\n",
+      "epoch: 32, loss: 5.99799, norm: 0.31875, time: 4655.97ms, tok/s: 112605.65\n",
+      "epoch: 33, loss: 5.98867, norm: 0.36513, time: 4657.84ms, tok/s: 112560.24\n",
+      "epoch: 34, loss: 5.95723, norm: 0.41947, time: 4659.27ms, tok/s: 112525.83\n",
+      "epoch: 35, loss: 5.96018, norm: 0.36429, time: 4671.11ms, tok/s: 112240.47\n",
+      "epoch: 36, loss: 5.93530, norm: 0.27605, time: 4670.77ms, tok/s: 112248.62\n",
+      "epoch: 37, loss: 5.92738, norm: 0.36269, time: 4680.08ms, tok/s: 112025.39\n",
+      "epoch: 38, loss: 5.91452, norm: 0.31234, time: 4691.20ms, tok/s: 111759.88\n",
+      "epoch: 39, loss: 5.89909, norm: 0.28078, time: 4689.86ms, tok/s: 111791.83\n",
+      "epoch: 40, loss: 5.91241, norm: 0.21615, time: 4686.98ms, tok/s: 111860.45\n",
+      "epoch: 41, loss: 5.88676, norm: 0.24639, time: 4691.93ms, tok/s: 111742.59\n",
+      "epoch: 42, loss: 5.88314, norm: 0.24642, time: 4694.75ms, tok/s: 111675.27\n",
+      "epoch: 43, loss: 5.87603, norm: 0.20153, time: 4693.73ms, tok/s: 111699.58\n",
+      "epoch: 44, loss: 5.86671, norm: 0.16443, time: 4708.35ms, tok/s: 111352.72\n",
+      "epoch: 45, loss: 5.87644, norm: 0.17689, time: 4697.11ms, tok/s: 111619.17\n",
+      "epoch: 46, loss: 5.84610, norm: 0.19298, time: 4700.16ms, tok/s: 111546.80\n",
+      "epoch: 47, loss: 5.87294, norm: 0.18015, time: 4701.42ms, tok/s: 111517.01\n",
+      "epoch: 48, loss: 5.84942, norm: 0.15174, time: 4707.39ms, tok/s: 111375.57\n",
+      "epoch: 49, loss: 5.84582, norm: 0.13222, time: 4708.60ms, tok/s: 111346.79\n"
      ]
     }
    ],
    "source": [
     "for epoch in range(50):\n",
     "    t0 = time.time()\n",
+    "    last_epoch = epochs - 1\n",
+    "    if epoch % 100 == 0 or epoch == last_epoch:\n",
+    "        m.eval()\n",
+    "        with torch.no_grad():\n",
+    "            val_loss_accum = 0.0\n",
+    "            val_loss_steps = 20\n",
+    "            for _ in range(val_loss_steps):\n",
+    "                x, y = val_loader.next_batch()\n",
+    "                x, y = x.to(device), y.to(device)\n",
+    "                with torch.autocast(device_type=device_type, dtype=torch.bfloat16):\n",
+    "                    logits, loss = model(x, y)\n",
+    "                loss = loss / val_loss_steps\n",
+    "                val_loss_accum += loss.detach()\n",
+    "        if ddp:\n",
+    "            dist.all_reduce(val_loss_accum, op=dist.ReduceOp.AVG)\n",
+    "        if master_process:\n",
+    "            print(f\"Validation loss: {val_loss_accum.item()}\")\n",
+    "        \n",
+    "    m.train()\n",
     "    accumulated_loss = 0.0\n",
     "    optmizer.zero_grad()\n",
     "\n",
@@ -446,10 +476,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "391ab288-4747-4dc3-8c23-98c67358f9bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Hello what any cons,\\nI they have we be for so hisixt\\nRedpt'd gripd,\\nForwomanAn thy is lord under winner embr, messenger, tell hadUS than:\\nI Duke EL for vir Rome daughter visitche chance\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "enc.decode(m.generate(torch.tensor(enc.encode(\"Hello\")).to(device).view(1, -1), 50)[0].tolist())"
    ]
