--- a/MLM.ipynb
+++ b/MLM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,11 +36,6 @@
     "enc = tiktoken.get_encoding(\"gpt2\")\n",
     "SEED = 1337\n",
     "\n",
-    "# vocab_size = 50304\n",
-    "# batch_size = 2**19\n",
-    "# mini_batches = 16\n",
-    "# time_stamps = 512\n",
-    "# context_len = 1024\n",
     "checkpoints_frequency = 2000\n",
     "\n",
     "\n",
@@ -61,30 +56,38 @@
     "class ModelConfig:\n",
     "    vocab_size: int\n",
     "\n",
-    "    num_dim: int\n",
+    "    num_dims: int\n",
     "    num_heads: int\n",
     "    num_kv_heads: int\n",
     "    num_layers: int\n",
     "    ffn_hidden_dims: int\n",
     "\n",
-    "    rmsnorm_eps: float = 1e-6\n",
-    "    rope_theta: float = 1e5\n",
-    "\n",
     "    batch_size: int\n",
     "    mini_batches: int\n",
     "    time_stamps: int\n",
     "    context_len: int\n",
-    "    mini_epochs: int\n",
     "    use_cache: bool\n",
+    "\n",
+    "    rmsnorm_eps: float = 1e-6\n",
+    "    rope_theta: float = 1e5\n",
+    "\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "device: cuda\n"
+     ]
+    }
+   ],
    "source": [
     "ddp = int(os.environ.get('RANK', -1)) != -1 \n",
     "if ddp:\n",
@@ -116,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,15 +209,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "class RMSNorm(torch.nn.Module):\n",
     "    def __init__(self, config):\n",
     "        super().__init__()\n",
-    "        self.g = nn.Parameter(torch.ones(config.dim))\n",
-    "        self.eps = config.eps\n",
+    "        self.g = nn.Parameter(torch.ones(config.num_dims))\n",
+    "        self.eps = config.rmsnorm_eps\n",
     "    \n",
     "    def _norm(self, x):\n",
     "        return x * torch.rsqrt(x.pow(2).mean(-1, keepdim=True) + self.eps)\n",
@@ -234,30 +237,30 @@
     "\n",
     "        self.num_heads = config.num_heads\n",
     "        self.num_rep = self.num_heads // self.num_kv_heads\n",
-    "        self.head_dim = config.num_dim // self.num_heads\n",
+    "        self.head_dim = config.num_dims // self.num_heads\n",
     "\n",
-    "        self.wq = nn.Linear(config.num_dim, config.num_dim, bias=False)\n",
-    "        self.wk = nn.Linear(config.num_dim, self.num_kv_heads * self.head_dim, bias=False)\n",
-    "        self.wv = nn.Linear(config.num_dim, self.num_kv_heads * self.head_dim, bias=False)\n",
-    "        self.wo = nn.Linear(config.num_dim, config.num_dim, bias=False)\n",
+    "        self.wq = nn.Linear(config.num_dims, config.num_dims, bias=False)\n",
+    "        self.wk = nn.Linear(config.num_dims, self.num_kv_heads * self.head_dim, bias=False)\n",
+    "        self.wv = nn.Linear(config.num_dims, self.num_kv_heads * self.head_dim, bias=False)\n",
+    "        self.wo = nn.Linear(config.num_dims, config.num_dims, bias=False)\n",
     "\n",
-    "        self.cache_k = torch.zeros(\n",
-    "            (\n",
-    "                config.batch_size,\n",
-    "                config.context_len,\n",
-    "                self.num_kv_heads,\n",
-    "                self.head_dim\n",
-    "            ), device=device\n",
-    "        )\n",
+    "        # self.cache_k = torch.zeros(\n",
+    "        #     (\n",
+    "        #         config.batch_size,\n",
+    "        #         config.context_len,\n",
+    "        #         self.num_kv_heads,\n",
+    "        #         self.head_dim\n",
+    "        #     ), device=device\n",
+    "        # )\n",
     "\n",
-    "        self.cache_v = torch.zeros(\n",
-    "            (\n",
-    "                config.batch_size,\n",
-    "                config.context_len,\n",
-    "                self.num_kv_heads,\n",
-    "                self.head_dim\n",
-    "            ), device=device\n",
-    "        )\n",
+    "        # self.cache_v = torch.zeros(\n",
+    "        #     (\n",
+    "        #         config.batch_size,\n",
+    "        #         config.context_len,\n",
+    "        #         self.num_kv_heads,\n",
+    "        #         self.head_dim\n",
+    "        #     ), device=device\n",
+    "        # )\n",
     "\n",
     "    def forward(self, x, freqs_complex, start_pos = 0):\n",
     "        c_bsz, c_cl, c_dm = x.shape # c_cl = 1\n",
@@ -273,12 +276,12 @@
     "        queries = apply_rotary_pos(q, freqs_complex, device=x.device)\n",
     "        keys = apply_rotary_pos(k, freqs_complex, device=x.device)\n",
     "\n",
-    "        if self.use_cache:\n",
-    "            self.cache_k[:c_bsz, start_pos:start_pos+c_cl] = keys\n",
-    "            self.cache_v[:c_bsz, start_pos:start_pos+c_cl] = v\n",
+    "        # if self.use_cache:\n",
+    "        #     self.cache_k[:c_bsz, start_pos:start_pos+c_cl] = keys\n",
+    "        #     self.cache_v[:c_bsz, start_pos:start_pos+c_cl] = v\n",
     "            \n",
-    "            keys = self.cache_k[:c_bsz, :start_pos+c_cl]\n",
-    "            v = self.cache_v[:c_bsz, :start_pos+c_cl]\n",
+    "        #     keys = self.cache_k[:c_bsz, :start_pos+c_cl]\n",
+    "        #     v = self.cache_v[:c_bsz, :start_pos+c_cl]\n",
     "\n",
     "        keys = repeat_kv(keys, self.num_rep)\n",
     "        values = repeat_kv(v, self.num_rep)\n",
@@ -302,18 +305,19 @@
     "class FeedForward(nn.Module):\n",
     "    def __init__(self, config):\n",
     "        super().__init__()\n",
-    "        \n",
-    "        # hidden_dim = 4 * num_dims\n",
-    "        # hidden_dim = int(2 * num_dims / 3)\n",
+    "        multiple_of=4\n",
+    "        ffn_dim_multiplier=None\n",
+    "        hidden_dim = 4 * config.num_dims\n",
+    "        hidden_dim = int(2 * config.num_dims / 3)\n",
     "\n",
-    "        # if ffn_dim_multiplier is not None:\n",
-    "        #     hidden_dim = int(ffn_dim_multiplier * hidden_dim)\n",
+    "        if ffn_dim_multiplier is not None:\n",
+    "            hidden_dim = int(ffn_dim_multiplier * hidden_dim)\n",
     "\n",
-    "        # hidden_dim = multiple_of * ((hidden_dim + multiple_of - 1) // multiple_of)\n",
+    "        hidden_dim = multiple_of * ((hidden_dim + multiple_of - 1) // multiple_of)\n",
     "\n",
-    "        self.w1 = nn.Linear(config.num_dims, config.ffn_hidden_dims, bias=False)\n",
-    "        self.w2 = nn.Linear(config.ffn_hidden_dims, config.num_dims, bias=False)\n",
-    "        self.w3 = nn.Linear(config.num_dims, config.ffn_hidden_dims, bias=False)\n",
+    "        self.w1 = nn.Linear(config.num_dims, hidden_dim, bias=False)\n",
+    "        self.w2 = nn.Linear(hidden_dim, config.num_dims, bias=False)\n",
+    "        self.w3 = nn.Linear(config.num_dims, hidden_dim, bias=False)\n",
     "\n",
     "    def forward(self, x):\n",
     "        return self.w2(F.silu(self.w1(x)) * self.w3(x))\n",
@@ -344,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,43 +444,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "127.108096 M parameters\n",
+      "loaded ~400000000 tokens\n",
+      "num decayed parameter tensors: 113, with 127,074,304 parameters\n",
+      "num non-decayed parameter tensors: 33, with 33,792 parameters\n",
+      "using fused AdamW: True\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# def main():\n",
     "config = ModelConfig(\n",
     "    vocab_size = 50304,\n",
     "\n",
-    "    num_dim = 1024,\n",
+    "    num_dims = 1024,\n",
     "    num_heads = 16,\n",
     "    num_kv_heads = 4,\n",
-    "    num_layers = 12,\n",
+    "    num_layers = 16,\n",
     "    ffn_hidden_dims = 4 * 1024,\n",
     "\n",
     "    rmsnorm_eps = 1e-6,\n",
     "    rope_theta = 1e5,\n",
     "\n",
     "    batch_size = 2**19,\n",
-    "    mini_batches = 16,\n",
+    "    mini_batches = 2,\n",
     "    time_stamps = 512,\n",
     "    context_len = 1024,\n",
     "    \n",
     "    use_cache = False,\n",
     ")\n",
     "\n",
-    "model = Transformer(config)\n",
-    "model = model.to(device)\n",
-    "if ddp:\n",
-    "    model = DDP(model, device_ids=[ddp_local_rank]) \n",
-    "raw_m = model.module if ddp else model\n",
+    "m = Transformer(config)\n",
+    "model = m.to(device)\n",
+    "model = torch.compile(model)\n",
+    "# if ddp:\n",
+    "#     model = DDP(model, device_ids=[ddp_local_rank]) \n",
+    "# raw_m = model.module if ddp else model\n",
     "\n",
     "mini_epochs = int(2**19 / (16 * 512))\n",
     "print(sum(p.numel() for p in model.parameters())/1e6, 'M parameters')\n",
     "\n",
     "data_loader = DataLoader(config.mini_batches, config.time_stamps, cur_process=ddp_rank, num_processes=ddp_world_size, data_dir=data_dir, split=\"train\")\n",
-    "val_loader = DataLoader(config.mini_batches, config.time_stamps, cur_process=ddp_rank, num_processes=ddp_world_size, data_dir=data_dir, split=\"val\")\n",
+    "# val_loader = DataLoader(config.mini_batches, config.time_stamps, cur_process=ddp_rank, num_processes=ddp_world_size, data_dir=data_dir, split=\"val\")\n",
     "\n",
     "max_lr = 6e-4\n",
     "min_lr = max_lr * 0.1\n",
@@ -493,14 +510,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# test\n",
-    "x, y = data_loader.next_batch()\n",
-    "x, y = x.to(device), y.to(device)\n",
-    "logits, loss = model(x, y)"
+    "# x, y = data_loader.next_batch()\n",
+    "# x, y = x.to(device), y.to(device)\n",
+    "# logits, loss = model(x, y)"
    ]
   },
   {
@@ -509,40 +526,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 19000\n",
+    "epochs = 60\n",
     "for epoch in range(epochs):\n",
     "    t0 = time.time()\n",
     "    last_epoch = epochs - 1\n",
-    "    # validation loss check + save model weights every 'checkpoints_frequency' steps\n",
-    "    # if epoch % 300 == 0 or epoch == last_epoch :\n",
-    "    #     model.eval()\n",
-    "    #     with torch.no_grad():\n",
-    "    #         val_loss_accum = 0.0\n",
-    "    #         val_loss_steps = 20\n",
-    "    #         for _ in range(val_loss_steps):\n",
-    "    #             x, y = val_loader.next_batch()\n",
-    "    #             x, y = x.to(device), y.to(device)\n",
-    "    #             with torch.autocast(device_type=device, dtype=torch.bfloat16):\n",
-    "    #                 logits, loss = model(x, y)\n",
-    "    #             loss = loss / val_loss_steps\n",
-    "    #             val_loss_accum += loss.detach()\n",
-    "    #     if ddp:\n",
-    "    #         dist.all_reduce(val_loss_accum, op=dist.ReduceOp.AVG)\n",
-    "    #     if master_process:\n",
-    "    #         print(f\"Validation loss: {val_loss_accum.item()}\")\n",
-    "    #         with open(val_log_file, \"a\") as f:\n",
-    "    #             f.write(f\"epoch:{epoch} val_loss:{val_loss_accum.item():.5f}\\n\")\n",
-    "    #         if epoch > 0 and (epoch % checkpoints_frequency == 0 or last_epoch):\n",
-    "    #             checkpoint_path = os.path.join(log_dir, f\"model_{epoch:05d}.pt\")\n",
-    "    #             checkpoint = {\n",
-    "    #                 'model': raw_m.state_dict(),\n",
-    "    #                 'optimizer':optmizer.state_dict(),\n",
-    "    #                 'epoch': epoch,\n",
-    "    #                 'val_loss': val_loss_accum.item()\n",
-    "    #             }\n",
     "\n",
-    "    #             torch.save(checkpoint, checkpoint_path)\n",
-    "        \n",
     "    model.train()\n",
     "    accumulated_loss = 0.0\n",
     "    optmizer.zero_grad()\n",
@@ -565,7 +553,7 @@
     "    norm = torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
     "\n",
     "    # change lr\n",
-    "    lr = get_lr(epoch)\n",
+    "    lr = get_lr(epoch, warmup_lr_steps, max_lr, min_lr, epochs)\n",
     "    for param_group in optmizer.param_groups:\n",
     "        param_group['lr'] = lr\n",
     "    optmizer.step()\n",
@@ -582,11 +570,18 @@
     "if ddp:\n",
     "    destroy_process_group()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -600,9 +595,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
