--- a/MLM.ipynb
+++ b/MLM.ipynb
@@ -68,6 +68,11 @@
     "    context_len: int\n",
     "    use_cache: bool\n",
     "\n",
+    "    num_experts: int\n",
+    "    moe_topk: int\n",
+    "    moe_eps: float = 1e-6\n",
+    "    moe_aux_loss_coef: float= 0.007\n",
+    "\n",
     "    rmsnorm_eps: float = 1e-6\n",
     "    rope_theta: float = 1e5\n",
     "\n",
@@ -263,25 +268,25 @@
     "        # )\n",
     "\n",
     "    def forward(self, x, freqs_complex, start_pos = 0):\n",
-    "        c_bsz, c_cl, c_dm = x.shape # c_cl = 1\n",
+    "        c_batch_size, c_context_len, c_dim = x.shape # c_context_len = 1\n",
     "    \n",
     "        q = self.wq(x)\n",
     "        k = self.wk(x)\n",
     "        v = self.wv(x)\n",
     "\n",
-    "        q = q.view(c_bsz, c_cl, self.num_heads, self.head_dim) # B, T, qh, hs\n",
-    "        k = k.view(c_bsz, c_cl, self.num_kv_heads, self.head_dim) # B, T, kh, hs\n",
-    "        v = v.view(c_bsz, c_cl, self.num_kv_heads, self.head_dim) # B, T, vh, hs\n",
+    "        q = q.view(c_batch_size, c_context_len, self.num_heads, self.head_dim) # B, T, qh, hs\n",
+    "        k = k.view(c_batch_size, c_context_len, self.num_kv_heads, self.head_dim) # B, T, kh, hs\n",
+    "        v = v.view(c_batch_size, c_context_len, self.num_kv_heads, self.head_dim) # B, T, vh, hs\n",
     "\n",
     "        queries = apply_rotary_pos(q, freqs_complex, device=x.device)\n",
     "        keys = apply_rotary_pos(k, freqs_complex, device=x.device)\n",
     "\n",
     "        # if self.use_cache:\n",
-    "        #     self.cache_k[:c_bsz, start_pos:start_pos+c_cl] = keys\n",
-    "        #     self.cache_v[:c_bsz, start_pos:start_pos+c_cl] = v\n",
+    "        #     self.cache_k[:c_batch_size, start_pos:start_pos+c_context_len] = keys\n",
+    "        #     self.cache_v[:c_batch_size, start_pos:start_pos+c_context_len] = v\n",
     "            \n",
-    "        #     keys = self.cache_k[:c_bsz, :start_pos+c_cl]\n",
-    "        #     v = self.cache_v[:c_bsz, :start_pos+c_cl]\n",
+    "        #     keys = self.cache_k[:c_batch_size, :start_pos+c_context_len]\n",
+    "        #     v = self.cache_v[:c_batch_size, :start_pos+c_context_len]\n",
     "\n",
     "        keys = repeat_kv(keys, self.num_rep)\n",
     "        values = repeat_kv(v, self.num_rep)\n",
@@ -292,13 +297,13 @@
     "\n",
     "        attention = torch.matmul(queries, keys.transpose(-2, -1)) * (1.0 / math.sqrt(self.head_dim))\n",
     "\n",
-    "        attention = torch.tril(attention[:, :, :c_cl, :c_cl])\n",
+    "        attention = torch.tril(attention[:, :, :c_context_len, :c_context_len])\n",
     "        attention = attention.masked_fill(attention == 0, float(\"-inf\"))\n",
     "\n",
     "        attention = F.softmax(attention, dim=-1).type_as(queries)\n",
     "        output = torch.matmul(attention, values)\n",
     "\n",
-    "        output = output.transpose(2, 1).contiguous().view(c_bsz, c_cl, c_dm)\n",
+    "        output = output.transpose(2, 1).contiguous().view(c_batch_size, c_context_len, c_dim)\n",
     "        return self.wo(output)\n",
     "\n",
     "\n",
@@ -322,13 +327,85 @@
     "    def forward(self, x):\n",
     "        return self.w2(F.silu(self.w1(x)) * self.w3(x))\n",
     "\n",
+    "class FFNwMoE(nn.Module):\n",
+    "    def __init__(self, config):\n",
+    "        super().__init__()\n",
+    "        self.moe_aux_loss_coef = config.moe_aux_loss_coef\n",
+    "        self.moe_eps = config.moe_eps\n",
+    "\n",
+    "        multiple_of=4\n",
+    "        ffn_dim_multiplier=None\n",
+    "        hidden_dim = 4 * config.num_dims\n",
+    "        hidden_dim = int(2 * config.num_dims / 3)\n",
+    "\n",
+    "        if ffn_dim_multiplier is not None:\n",
+    "            hidden_dim = int(ffn_dim_multiplier * hidden_dim)\n",
+    "\n",
+    "        hidden_dim = multiple_of * ((hidden_dim + multiple_of - 1) // multiple_of)\n",
+    "        self.hidden_dim = hidden_dim\n",
+    "\n",
+    "        self.top_k = config.moe_topk\n",
+    "\n",
+    "        self.num_experts = config.num_experts\n",
+    "        self.router = nn.Linear(config.num_dims, self.num_experts, bias=False)\n",
+    "        self.experts = nn.ModuleList()\n",
+    "        for _ in range(self.num_experts):\n",
+    "            self.experts.append(\n",
+    "                nn.ModuleList([\n",
+    "                    nn.Linear(config.num_dims, hidden_dim, bias=False),\n",
+    "                    nn.Linear(hidden_dim, config.num_dims, bias=False),\n",
+    "                    nn.Linear(config.num_dims, hidden_dim, bias=False)\n",
+    "                ]))\n",
+    "            \n",
+    "    def forward(self, x):\n",
+    "        c_batch_size, c_context_len, c_dim = x.shape\n",
+    "        x_flat = x.view(-1, c_dim) #c_batch_size * c_context_len, c_dim\n",
+    "\n",
+    "\n",
+    "        router_out = F.softmax(self.router(x_flat), dim=-1)\n",
+    "        topk_probs, topk_indices = router_out.topk(self.top_k, dim=-1)\n",
+    "        \n",
+    "        output = torch.zeros_like(x_flat)\n",
+    "\n",
+    "        # expert_mask = torch.zeros_like(router_out).scatter(-1, topk_indices, 1.0)\n",
+    "        # density = expert_mask.mean(dim=0)\n",
+    "        # router_prob_mean = router_out.mean(dim=0)\n",
+    "\n",
+    "        # cv_expert = density.std() / (density.mean() + self.moe_eps)\n",
+    "        # cv_router = router_prob_mean.std() / (router_prob_mean.mean() + self.moe_eps)\n",
+    "        \n",
+    "        # aux_loss = (cv_expert**2 + cv_router**2) * self.moe_aux_loss_coef\n",
+    "\n",
+    "        expert_mask = F.one_hot(topk_indices[:, 0], self.num_experts).float()\n",
+    "        density = expert_mask.mean(dim=0)\n",
+    "        router_prob_mean = router_out.mean(dim=0)\n",
+    "        aux_loss = self.moe_aux_loss_coef * torch.sum(density * router_prob_mean) * self.num_experts\n",
+    "        \n",
+    "        for i in range(self.top_k):\n",
+    "            expert_index = topk_indices[:, i]\n",
+    "            expert_probs = topk_probs[:, i]\n",
+    "\n",
+    "            for expert_id in range(self.num_experts):\n",
+    "                idx = (expert_id == expert_index).nonzero().squeeze()\n",
+    "\n",
+    "                if idx.numel() == 0:\n",
+    "                    continue\n",
+    "                x_for_expert = x_flat[idx]\n",
+    "                w1, w2, w3 = self.experts[expert_id]\n",
+    "                \n",
+    "                expert_output = w2(F.silu(w1(x_for_expert)) * w3(x_for_expert))\n",
+    "                output[idx] += expert_output * expert_probs[idx].unsqueeze(-1)\n",
+    "\n",
+    "        return output.view(c_batch_size, c_context_len, c_dim), aux_loss\n",
+    "\n",
+    "\n",
     "\n",
     "class Block(nn.Module):\n",
     "    def __init__(self, config, device=device):\n",
     "        super().__init__()\n",
     "\n",
     "        self.attention = GroupedQueryAttention(config, device=device)\n",
-    "        self.ffn = FeedForward(config)\n",
+    "        self.ffn = FFNwMoE(config)\n",
     "\n",
     "        self.norm_attention = RMSNorm(config)\n",
     "        self.norm_ffn = RMSNorm(config)\n",
@@ -340,10 +417,11 @@
     "            start_pos\n",
     "            )\n",
     "        \n",
-    "        x = x + self.ffn(\n",
+    "        ffn_out, aux_loss = self.ffn(\n",
     "            self.norm_ffn(x)\n",
     "            )\n",
-    "        return x"
+    "        x = x + ffn_out\n",
+    "        return x, aux_loss"
    ]
   },
   {
@@ -409,8 +487,12 @@
     "        x = self.tokens_embedding(x)\n",
     "        freqs_complex = self.freqs_complex[start_pos:start_pos + seq_len]\n",
     "        \n",
+    "        total_aux_loss = 0\n",
+    "\n",
+    "\n",
     "        for block in self.blocks:\n",
-    "            x = block(x, freqs_complex=freqs_complex, start_pos=start_pos)\n",
+    "            x, aux_loss = block(x, freqs_complex=freqs_complex, start_pos=start_pos)\n",
+    "            total_aux_loss += aux_loss\n",
     "\n",
     "        x = self.norm(x)\n",
     "        logits = self.ll_head(x)\n",
@@ -419,11 +501,13 @@
     "        if targets is None:\n",
     "            loss = None\n",
     "        else:\n",
-    "            c_bsz, c_cl, c_dm = logits.shape\n",
-    "            logits = logits.view(c_bsz*c_cl, c_dm)\n",
-    "            targets = targets.view(c_bsz*c_cl)\n",
-    "            loss = F.cross_entropy(logits, targets)\n",
-    "        return logits, loss\n",
+    "            c_batch_size, c_context_len, c_dim = logits.shape\n",
+    "            logits = logits.view(c_batch_size*c_context_len, c_dim)\n",
+    "            targets = targets.view(c_batch_size*c_context_len)\n",
+    "            tt_loss = F.cross_entropy(logits, targets)\n",
+    "            loss = tt_loss + total_aux_loss\n",
+    "\n",
+    "        return logits, loss, tt_loss\n",
     "\n",
     "    @torch.no_grad()\n",
     "    def generate(self, x, max_tokens, use_cache=False):\n",
@@ -480,6 +564,11 @@
     "    context_len = 1024,\n",
     "    \n",
     "    use_cache = False,\n",
+    "\n",
+    "    num_experts = 6,\n",
+    "    moe_topk = 2,\n",
+    "    moe_eps = 1e-6,\n",
+    "    moe_aux_loss_coef = 0.007\n",
     ")\n",
     "\n",
     "m = Transformer(config)\n",
@@ -581,7 +670,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -595,7 +684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
